<resources>
    <string name="app_name">HelloWorld</string>
    <string name="escribe_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email</string>
    <string name="hint_edittextmail">introduce tu email</string>
    <string name="nombre">Nombre:</string>
    <string name="hint_edittextnombre">introduce tu nombre</string>
    <string name="apellidos">Apellidos:</string>
    <string name="hint_edittextapellidos">introduce tus apellidos</string>
</resources>