<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/hint_edittextmail" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/hint_edittextnombre" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/hint_edittextapellidos" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_alignParentBottom="true"
            android:text="Switch" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/checkbox"
            android:checked="true"
            android:text="Tengo más de 18 años" />
    </RelativeLayout>


</LinearLayout>