<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_mensaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#ececec"
            android:hint="@string/escribe_mensaje"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#444444"
            android:text="@string/enviar"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#f2f2f2"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/textview_mensaje"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name" />

    </RelativeLayout>

</LinearLayout>